[workspace]
resolver = "2"
members = [
    "crate/azure_cvm",
    "crate/maa_client",
    "crate/pccs_client",
    "crate/ratls",
    "crate/sev_quote",
    "crate/sgx_quote",
    "crate/sgx_pck_extension",
    "crate/tdx_quote",
    "crate/tee_attestation",
    "crate/tpm_quote",
]

[workspace.package]
version = "1.4.0"
edition = "2021"
license = "BUSL-1.1" # "Business Source License 1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/tee-tools"

[workspace.dependencies]
base64 = "0.22"
asn1-rs = "0.7"
asn1 = "0.21"
bincode = "1.3"
der = { version = "0.7", features = ["alloc", "derive", "flagset", "oid"] }
ecdsa = { version = "0.16", features = ["sha2", "spki"] }
elliptic-curve = "0.13"
hex = { version = "0.4", features = ["serde"] }
hkdf = "0.12"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
p256 = { version = "0.13", features = ["arithmetic", "pkcs8", "ecdsa-core"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
rsa = "0.9"
scroll = { version = "0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-hex = "0.1"
sev = { git = "https://github.com/virtee/sev", rev = "6a176a5f6068d30ac629fe59c13634a55076e7ae", default-features = false }
sha2 = "0.10"
spki = "0.7"
thiserror = "2.0"
x509-cert = { version = "0.2", features = ["builder", "hazmat"] }
x509-parser = "0.17"
