[package]
name = "maa_client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
hex = { workspace = true }
jose-jwk = { version = "0.1", features = ["rsa"] }
jose-jws = "0.1"
jwt-simple = "0.10"
reqwest = { workspace = true }
rsa = "0.9"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
x509-cert = "0.2"
