[package]
name = "ratls"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intel SGX verification of Remote Attestation based TLS certificate"

[dependencies]
asn1-rs = { workspace = true }
bincode = { workspace = true }
openssl = { workspace = true }
sev_quote = { path = "../sev_quote" }
sgx_quote = { path = "../sgx_quote" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
thiserror = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
base64 = "0.21"
