[package]
name = "ratls-certtool"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intel SGX/AMD SEV verification of Remote Attestation based TLS certificate tool"

[[bin]]
name = "ratls-certtool"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", default-features = false, features = [
    "cargo",
    "derive",
    "error-context",
    "help",
    "std",
    "string",
    "usage",
] }
curve25519-dalek = { workspace = true }
hex = { workspace = true }
pem-rfc7468 = "0.7"
ratls = { path = "../ratls" }
tee_attestation = { path = "../tee_attestation" }
x509-parser = { workspace = true }
