[package]
name = "sgx_quote"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intel SGX quote parsing and verification"

[lib]
name = "sgx_quote"
crate-type = ["cdylib","rlib"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
intel-tee-quote-verification-rs = "0.2"
log = "0.4"
openssl = { workspace = true }
scroll = { version = "0.11", features = ["derive"] }

[dev-dependencies]
env_logger = "0.10"
