[package]
name = "sgx_quote"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intel SGX quote parsing and verification"

[lib]
name = "sgx_quote"
crate-type = ["cdylib","rlib"]

[dependencies]
hex = { workspace = true }
intel-tee-quote-verification-rs = "0.2"
log = { workspace = true }
openssl = { workspace = true }
scroll = { version = "0.11", features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.10"
