[package]
name = "sgx_quote"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intel SGX quote parsing and verification"

[lib]
name = "sgx_quote"
crate-type = ["cdylib","rlib"]

[dependencies]
chrono = "0.4"
elliptic-curve = "0.13"
hex = { workspace = true }
env_logger = "0.10"
hkdf = "0.12"
log = { workspace = true }
p256 = { version = "0.13" , features = ["arithmetic"]} 
rand_chacha = { version = "0.3" }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
rsa = "0.9"
scroll = { version = "0.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx_pck_extension = { path = "../sgx_pck_extension" }
sha2 = "0.10"
thiserror = { workspace = true }
urlencoding = "1.0.0"
x509-parser = { workspace = true, features = ["verify"] }

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }