[package]
name = "azure_cvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
jose-jwk = { version = "0.1", features = ["rsa"] }
memoffset = "0.9"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
sev = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tss-esapi = "7.6"
zerocopy = { version = "0.8", features = ["derive"] }
