[package]
name = "azure_cvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
jose-jwk = { workspace = true }
memoffset = "0.9"
pem = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
sev = { workspace = true }
sev_quote = { path = "../sev_quote" }
sha2 = { workspace = true }
thiserror = { workspace = true }
tss-esapi = { workspace = true }
zerocopy = { version = "0.8", features = ["derive"] }
