[package]
name = "maa_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
jose-jwk = { workspace = true }
jose-jws = "0.1"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
pem = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
x509-cert = { workspace = true }
