[package]
name = "ratls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intel SGX/AMD SEV verification of Remote Attestation based TLS certificate"

[dependencies]
const-oid = { workspace = true }
der = { workspace = true }
ecdsa = { workspace = true }
p256 = { workspace = true }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
spki = { workspace = true }
tee_attestation = { path = "../tee_attestation" }
thiserror = { workspace = true }
x509-cert = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
