[package]
name = "sev_quote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMD SEV quote parsing and verification"

[lib]
name = "sev_quote"
crate-type = ["cdylib", "rlib"]

[dependencies]
asn1-rs = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
sev = { git = "https://github.com/virtee/sev", rev = "6a176a5f6068d30ac629fe59c13634a55076e7ae", features = [ # TODO: update after releasing
    "snp",
    "openssl",
    "sev",
] }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.3", features = ["serde", "v4"] }
x509-parser = { workspace = true }

[dev-dependencies]
env_logger = "0.10"
