[package]
name = "sev_quote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMD SEV quote parsing and verification"

[lib]
name = "sev_quote"
crate-type = ["cdylib", "rlib"]

[dependencies]
asn1-rs = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
sev = { workspace = true, features = [
    "snp",
    "crypto_nossl",
    "sev",
] }
sha2 = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
