[package]
name = "sgx_pck_extension"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Parsing of Intel SGX PCK certificate extension"

[dependencies]
asn1-rs = { workspace = true }
asn1 = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true }
