[package]
name = "sgx_pck_extension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parsing of Intel SGX PCK certificate extension"

[dependencies]
asn1 = { workspace = true }
asn1-rs = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true }
