[package]
name = "sgx_quote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intel SGX quote parsing and verification"

[lib]
name = "sgx_quote"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
hex = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
p256 = { workspace = true }
pccs_client = { path = "../pccs_client" }
rsa = { workspace = true }
scroll = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
serde_json = { workspace = true }
sgx_pck_extension = { path = "../sgx_pck_extension" }
sha2 = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true, features = ["verify"] }

[dev-dependencies]
env_logger = "0.11"
