[package]
name = "tdx_quote"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intel TDX quote parsing and verification"

[lib]
name = "tdx_quote"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
nix = { version = "0.28", features = ["ioctl"] }
p256 = { workspace = true }
pccs_client = { path = "../pccs_client" }
scroll = { version = "0.12", features = ["derive"] }
serde = { workspace = true }
serde-hex = { workspace = true }
sgx_quote = { path = "../sgx_quote" }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
