[package]
name = "tdx_quote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intel TDX quote parsing and verification"

[lib]
name = "tdx_quote"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
p256 = { workspace = true }
pccs_client = { path = "../pccs_client" }
scroll = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
sgx_quote = { path = "../sgx_quote" }
sha2 = { workspace = true }
tdx-attest-rs = { git = "https://github.com/intel/confidential-computing.tee.dcap.git", tag = "DCAP_1.25" }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
