[package]
name = "tee_attestation"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "TEE attestation report parsing and verification"

[lib]
name = "tee_attestation"
crate-type = ["cdylib", "rlib"]

[dependencies]
azure_sev_quote = { path = "../azure_sev_quote" }
sha2 = { workspace = true }
sev_quote = { path = "../sev_quote" }
serde = { workspace = true }
sgx_quote = { path = "../sgx_quote" }
tdx_quote = { path = "../tdx_quote" }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
