[package]
name = "tee_attestation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TEE attestation report parsing and verification"

[lib]
name = "tee_attestation"
crate-type = ["cdylib", "rlib"]

[dependencies]
azure_cvm = { path = "../azure_cvm" }
serde = { workspace = true }
sev_quote = { path = "../sev_quote" }
sgx_quote = { path = "../sgx_quote" }
sha2 = "0.10"
tdx_quote = { path = "../tdx_quote" }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.10"
