[package]
name = "tls-cert"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Get TLS peer certificate for inspection"

[dependencies]
rustls = { workspace = true }
thiserror = { workspace = true }
url = "2.5"

[dev-dependencies]
rustls-pki-types = "1.14"
