[package]
name = "tpm_quote"
version = "0.2.1"
edition = "2021"

[dependencies]
hex = { workspace = true }
p256 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tss-esapi = "7.4"

[dev-dependencies]
env_logger = "0.10"
log = "0.4"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
