[package]
name = "tpm_quote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
p256 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tss-esapi = "7.6"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
test-log = { version = "0.2" }
