[package]
name = "tpm_quote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
p256 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tss-esapi = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }
test-log = { version = "0.2" }
