[package]
name = "azure_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
autotests = false
autobenches = false

[dependencies]
azure_cvm = { path = "../../crate/azure_cvm" }
sev_quote = { path = "../../crate/sev_quote" }
tee_attestation = { path = "../../crate/tee_attestation" }

[[test]]
name = "az_integration_tests"
path = "src/test.rs"
harness = true
